--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,1 +1,32 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  background-color: #E4E6EB;
+  font-family: "Poppins", poppins;
+}
+
+.navbar-brand img {
+  max-height: 40px;
+}
+
+.btn-navbar-right {
+  margin-top: -10px !important;
+  height: 70px;
+  margin-bottom: -8px !important;
+  margin-right: -18px !important;
+  border-radius: 0;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #071C4D;
+}
+.navbar-light .navbar-nav .nav-link.active {
+  font-weight: bold;
+  color: #071C4D !important;
+}
+
+.btn-login {
+  background-color: #181E4B;
+  color: #fff;
+}
+.btn-login:hover {
+  color: #fff;
+}/*# sourceMappingURL=main.css.map */
