--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #E4E6EB;
-  font-family: "Poppins", poppins;
+  background-color: #fff;
+  font-family: "Poppins", sans-serif;
 }
 
 .navbar-brand img {
@@ -12,15 +12,18 @@ body {
   height: 70px;
   margin-bottom: -8px !important;
   margin-right: -18px !important;
-  border-radius: 0;
+  border-radius: 8;
 }
 
+.navbar-light {
+  background-color: #FFF1DA;
+}
 .navbar-light .navbar-nav .nav-link {
-  color: #071C4D;
+  color: #181E4B;
 }
 .navbar-light .navbar-nav .nav-link.active {
   font-weight: bold;
-  color: #071C4D !important;
+  color: #181E4B !important;
 }
 
 .btn-login {
@@ -28,5 +31,6 @@ body {
   color: #fff;
 }
 .btn-login:hover {
+  background-color: #1D287D;
   color: #fff;
 }/*# sourceMappingURL=main.css.map */
