--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -1,6 +1,6 @@
 body {
-    background-color: #E4E6EB;
-    font-family: 'Poppins', poppins;
+    background-color: #fff;
+    font-family: 'Poppins', sans-serif;
 }
 
 .navbar-brand {
@@ -14,17 +14,19 @@ body {
     height: 70px;
     margin-bottom: -8px !important;
     margin-right: -18px !important;
-    border-radius: 0;
+    border-radius: 8;
 }
 
 .navbar-light {
+    background-color: #FFF1DA;
+
     .navbar-nav {
         .nav-link {
-            color: #071C4D;
+            color: #181E4B;
 
             &.active {
                 font-weight: bold;
-                color: #071C4D !important;
+                color: #181E4B !important;
             }
         }
     }
@@ -35,6 +37,7 @@ body {
     color: #fff;
 
     &:hover {
+        background-color: #1D287D;
         color: #fff;
     }
 }
