--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -33,4 +33,33 @@ body {
 .btn-login:hover {
   background-color: #1D287D;
   color: #fff;
+}
+
+header {
+  padding: 180px 0 165px;
+  margin-top: -70px;
+  background-image: url("../images/header.jpg");
+  background-size: cover;
+}
+header h1,
+header p {
+  color: #181E4B;
+}
+header h1 {
+  font-family: "Volkhov", serif;
+  font-weight: bold;
+  font-size: 50px;
+}
+header p {
+  font-size: 16px;
+}
+header .btn-get-started {
+  background-color: #F0A400;
+  color: #fff;
+  font-weight: bold;
+}
+header .btn-get-started:hover {
+  background-color: #F2A500;
+  color: #fff;
+  font-weight: bold;
 }/*# sourceMappingURL=main.css.map */
