--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -62,4 +62,26 @@ header .btn-get-started:hover {
   background-color: #F2A500;
   color: #fff;
   font-weight: bold;
+}
+
+.section-stats {
+  margin-top: -50px;
+  background-color: #181E4B;
+  border-radius: 8px;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  text-align: center;
+}
+.section-stats .stats-detail {
+  padding-top: 20px;
+  padding-left: 40px;
+}
+.section-stats h2 {
+  font-size: 30px;
+  margin-bottom: 0;
+  font-weight: bold;
+}
+.section-stats p {
+  font-size: 20px;
+  font-weight: lighter;
 }/*# sourceMappingURL=main.css.map */
