--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -66,10 +66,11 @@ header .btn-get-started:hover {
 
 .section-stats {
   margin-top: -50px;
-  background-color: #181E4B;
+  background-color: #FFF1DA;
   border-radius: 8px;
   font-family: "Poppins", sans-serif;
-  color: #fff;
+  color: #181E4B;
+  position: relative;
   text-align: center;
 }
 .section-stats .stats-detail {
@@ -82,6 +83,57 @@ header .btn-get-started:hover {
   font-weight: bold;
 }
 .section-stats p {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: lighter;
+}
+
+.section-popular {
+  min-height: 540px;
+  background-color: #181E4B;
+  margin-top: -50px;
+  margin-bottom: -230px;
+}
+.section-popular .section-popular-heading {
+  margin-top: 150px;
+}
+.section-popular h2,
+.section-popular p {
+  color: #fff;
+}
+.section-popular h2 {
+  font-family: "Volkhov", serif;
+  font-weight: bold;
+  font-size: 30px;
+}
+.section-popular p {
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.section-popular-content .section-popular-travel .card-travel {
+  min-height: 380px;
+  background-color: #FFF1DA;
+  color: #fff;
+  border-radius: 8px;
+  padding: 30px;
+  background-size: cover;
+  margin-bottom: 20px;
+}
+.section-popular-content .section-popular-travel .travel-country {
+  font-size: 18px;
+  color: #fff;
+}
+.section-popular-content .section-popular-travel .travel-location {
+  font-size: 26px;
+  color: #fff;
+  font-weight: bold;
+}
+.section-popular-content .section-popular-travel .travel-button .btn-travel-details {
+  background-color: #F0A400;
+  color: #fff;
+}
+.section-popular-content .section-popular-travel .travel-button .btn-travel-details:hover {
+  background-color: #F2A500;
+  color: #fff;
+  font-weight: bold;
 }/*# sourceMappingURL=main.css.map */
