--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -84,10 +84,11 @@ header {
 // statistics
 .section-stats {
     margin-top: -50px;
-    background-color: #181E4B;
+    background-color: #FFF1DA;
     border-radius: 8px;
     font-family: 'Poppins', sans-serif;
-    color: #fff;
+    color: #181E4B;
+    position: relative;
     text-align: center;
 
     .stats-detail {
@@ -102,7 +103,75 @@ header {
     }
 
     p {
-        font-size: 20px;
+        font-size: 16px;
         font-weight: lighter;
+    }
+}
+
+// popular
+.section-popular {
+    min-height: 540px;
+    background-color: #181E4B;
+    margin-top: -50px;
+    margin-bottom: -230px;
+
+    .section-popular-heading {
+        margin-top: 150px;
+    }
+
+    h2,
+    p {
+        color: #fff;
+    }
+
+    h2 {
+        font-family: "Volkhov", serif;
+        font-weight: bold;
+        font-size: 30px;
+    }
+
+    p {
+        margin-top: 20px;
+        font-size: 16px;
+    }
+}
+
+// pupular destination
+.section-popular-content {
+    .section-popular-travel {
+        .card-travel {
+            min-height: 380px;
+            background-color: #FFF1DA;
+            color: #fff;
+            border-radius: 8px;
+            padding: 30px;
+            background-size: cover;
+            margin-bottom: 20px;
+        }
+
+        .travel-country {
+            font-size: 18px;
+            color: #fff;
+        }
+
+        .travel-location {
+            font-size: 26px;
+            color: #fff;
+            font-weight: bold;
+        }
+
+        .travel-button {
+            .btn-travel-details {
+                background-color: #F0A400;
+                color: #fff;
+
+                &:hover {
+                    background-color: #F2A500;
+                    color: #fff;
+                    font-weight: bold;
+
+                }
+            }
+        }
     }
 }
