--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -136,4 +136,23 @@ header .btn-get-started:hover {
   background-color: #F2A500;
   color: #fff;
   font-weight: bold;
+}
+
+.section-networks {
+  background-color: #fff;
+  margin-top: -170px;
+  padding-top: 240px;
+  padding-bottom: 50px;
+}
+.section-networks h2 {
+  font-family: "Volkhov", serif;
+  font-weight: bold;
+  font-size: 30px;
+}
+.section-networks p {
+  margin-top: 20px;
+  font-size: 16px;
+}
+.section-networks img {
+  max-width: 100%;
 }/*# sourceMappingURL=main.css.map */
