--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -69,12 +69,10 @@ header {
     .btn-get-started {
         background-color: #F0A400;
         color: #fff;
-        font-weight: bold;
 
         &:hover {
-            background-color: #F2A500;
+            background-color: #FFCB5A;
             color: #fff;
-            font-weight: bold;
 
         }
     }
@@ -166,9 +164,8 @@ header {
                 color: #fff;
 
                 &:hover {
-                    background-color: #F2A500;
+                    background-color: #FFCB5A;
                     color: #fff;
-                    font-weight: bold;
 
                 }
             }
@@ -196,5 +193,90 @@ header {
 
     img {
         max-width: 100%;
+    }
+}
+
+// section testimonial
+.section-testimonial-heading {
+
+    background-color: #FFF1DA;
+    padding-top: 50px;
+    min-height: 506px;
+
+    h2,
+    p {
+        color: #181E4B;
+    }
+
+    h2 {
+        font-family: "Volkhov", serif;
+        font-weight: bold;
+        font-size: 30px;
+    }
+
+    p {
+        margin-top: 20px;
+        font-size: 16px;
+    }
+}
+
+.section-testimonial-content {
+    margin-top: -300px;
+    padding-bottom: 50px;
+
+    .card-testimonial {
+        padding: 40px 20px 10px;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        background-color: #fff;
+
+        .testimonial-content {
+            min-height: 380px;
+        }
+
+        h3 {
+            padding-top: 20px;
+            font-weight: bolder;
+            color: #181E4B;
+        }
+
+        .testimonial {
+            font-size: 18px;
+            color: #1D287D;
+            min-height: 150px;
+        }
+
+        .trip-to {
+            font-weight: normal;
+            color: #181E4B;
+        }
+
+        hr {
+            margin-left: -20px;
+            margin-right: -20px;
+            background-color: #FFF1DA;
+        }
+    }
+
+    .btn-need-help {
+        background-color: #DF6951;
+        color: #fff;
+
+        &:hover {
+            background-color: #FF9580;
+            color: #fff;
+
+        }
+    }
+
+    .btn-get-started {
+        background-color: #F0A400;
+        color: #fff;
+
+        &:hover {
+            background-color: #FFCB5A;
+            color: #fff;
+
+        }
     }
 }
